--- a/views/users/login.liquid
+++ b/views/users/login.liquid
@@ -2,15 +2,15 @@
 {% block content %}
 
     <div class="container-sm">
-        <form action="/user/signup" method="POST">
+        <form action="/user/login" method="POST">
             <fieldset>
-                <legend>New User</legend>
+                <legend>Username</legend>
                 <label class="form-label">Username: </label>
                 <input type="text" name="username" placeholder="username" class="form-control" required>
                 <label class="form-label">Password</label>
                 <input type="password" name="password" placeholder="enter password" class="form-control" required>
             </fieldset>
-            <input type="submit" value="Create Account" class="btn btn-success">
+            <input type="submit" value="Log In" class="btn btn-success">
         </form>
     </div>
 
