too many updates

--- a/views/fruits/edit.liquid
+++ b/views/fruits/edit.liquid
@@ -10,7 +10,7 @@
                 name="name" 
                 placeholder="enter fruit name"
                 class="form-control"
-                value={{ fruit.name }}
+                value="{{ fruit.name }}"
             >
             <label class="form-label">Color:</label>
             <input 
@@ -18,7 +18,7 @@
                 name="color" 
                 placeholder="enter fruit color"
                 class="form-control"
-                value={{ fruit.color }}
+                value="{{ fruit.color }}"
             >
             <label class="form-label">Ready To Eat: </label>
             <input 
