--- a/views/users/login.liquid
+++ b/views/users/login.liquid
@@ -4,7 +4,7 @@
     <div class="container-sm">
         <form action="/user/login" method="POST">
             <fieldset>
-                <legend>Username</legend>
+                <legend>Welcome Back, Please log in to continue</legend>
                 <label class="form-label">Username: </label>
                 <input type="text" name="username" placeholder="username" class="form-control" required>
                 <label class="form-label">Password</label>
